--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" crossorigin="anonymous" />
     <link rel="stylesheet" href="/style.css" />
-    <title>JSON Server</title>
+    <title>Dynamic JSON Server</title>
   </head>
 
   <body>
